[tool.poetry]
name = "temp"
version = "0.1.0"
description = ""
authors = ["rahuldahal <rdaahal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
dev = "redalyze.main:main"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.8.1"
pandas = "^2.2.3"
dash = "^2.18.2"
nltk = "^3.9.1"
networkx = "^3.4.2"
dash-bootstrap-components = "^1.7.1"
gunicorn = "^23.0.0"
google-genai = "^1.2.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
